--- a/package.json
+++ b/package.json
@@ -12,9 +12,21 @@
     "babel-cli": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "browserify": "^13.0.1",
+    "chai": "*",
+    "enzyme": "^2.3.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-sass": "^2.3.1"
+    "gulp-sass": "^2.3.1",
+    "jsdom": "^9.3.0",
+    "mocha": "*",
+    "mocha-jsdom": "^1.1.0",
+    "react": "^15.1.0",
+    "react-addons-test-utils": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "sinon": "^1.17.4",
+    "sortablejs": "^1.4.2",
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {}
 }
