--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mocha-jsdom": "^1.1.0",
     "react": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.1.0",
     "sinon": "^1.17.4",
     "vinyl-source-stream": "^1.1.0"
