--- a/package.json
+++ b/package.json
@@ -29,5 +29,7 @@
     "sinon": "^1.17.4",
     "vinyl-source-stream": "^1.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "an-array-of-english-words": "^1.1.0"
+  }
 }
