--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-addons-test-utils": "^15.1.0",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
+    "react-dnd-test-backend": "^1.0.2",
     "react-dom": "^15.1.0",
     "sinon": "^1.17.4",
     "vinyl-source-stream": "^1.1.0"
